[HVHA-4] Create Appnet
- Start app in INITIALIZING mode where operator is invited to create an address book
- Start app in OK mode where operator already has an address book
